migration/ram: Accelerate the transmission of CSV guest's encrypted pages
When memory encryption is enabled, the guest memory will be encrypted with
the guest specific key. The patch introduces an accelerate solution which
queued the pages into list and send them togather by COMMAND_BATCH.

Signed-off-by: hanliyang <hanliyang@hygon.cn>

--- a/hw/i386/Kconfig
+++ b/hw/i386/Kconfig
@@ -12,7 +12,12 @@ config SGX
 
 config CSV
     bool
+    select HYGON_CSV_MIG_ACCEL
     depends on SEV
+
+config HYGON_CSV_MIG_ACCEL
+    bool
+    depends on CSV
 
 config PC
     bool
