--- a/hw/i386/Kconfig
+++ b/hw/i386/Kconfig
@@ -10,6 +10,10 @@ config SGX
     bool
     depends on KVM
 
+config CSV
+    bool
+    depends on SEV
+
 config PC
     bool
     imply APPLESMC
@@ -26,6 +30,7 @@ config PC
     imply QXL
     imply SEV
     imply SGX
+    imply CSV
     imply TEST_DEVICES
     imply TPM_CRB
     imply TPM_TIS_ISA
