--- a/meson_options.txt
+++ b/meson_options.txt
@@ -121,7 +121,7 @@ option('avx512f', type: 'feature', value: 'disabled',
        description: 'AVX512F optimizations')
 option('avx512bw', type: 'feature', value: 'auto',
        description: 'AVX512BW optimizations')
-option('keyring', type: 'feature', value: 'auto',
+option('keyring', type: 'feature', value: 'disabled',
        description: 'Linux keyring support')
 option('libkeyutils', type: 'feature', value: 'auto',
        description: 'Linux keyutils support')
